Upadate Portofolio PASTA

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                         `;
                     });
                     
-                    htmlPortofolio += `<div class="col-md-6 col-lg-4">
+                    htmlPortofolio += `<div class="col-md-6 col-lg-4 mb-3">
                                     <div class="card ">
                                         <img src="${data[index].images[0]}" class="card-img-top cursor-pointer" alt="Sample" onclick="showModal('${index}')" loading="lazy">
                                         <div class="card-body">
